@@ -1,6 +1,5 @@
 package ru.practicum.shareit.booking;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
@@ -10,7 +9,8 @@ import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDateTime;
 
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.patch;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @SpringBootTest
@@ -18,38 +18,29 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 class BookingIntegrationTest {
 
     @Autowired
-    MockMvc mvc;
-    @Autowired
-    ObjectMapper mapper;
+    private MockMvc mvc;
 
     @Test
     void approve_byWrongUser_shouldReturn403() throws Exception {
-
         mvc.perform(post("/users")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("""
-                                {"name":"owner","email":"o@o.ru"}
-                                """))
+                        .content("{\"name\":\"owner\",\"email\":\"o@o.ru\"}"))
                 .andExpect(status().isOk());
 
         mvc.perform(post("/users")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("""
-                                {"name":"booker","email":"b@b.ru"}
-                                """))
+                        .content("{\"name\":\"booker\",\"email\":\"b@b.ru\"}"))
                 .andExpect(status().isOk());
 
         mvc.perform(post("/items")
                         .header("X-Sharer-User-Id", "1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("""
-                                {"name":"item","description":"d","available":true}
-                                """))
+                        .content("{\"name\":\"item\",\"description\":\"d\",\"available\":true}"))
                 .andExpect(status().isOk());
 
-        String bookingBody = """
-                {"itemId":1,"start":"%s","end":"%s"}
-                """.formatted(LocalDateTime.now().plusDays(1), LocalDateTime.now().plusDays(2));
+        String start = LocalDateTime.now().plusDays(1).toString();
+        String end = LocalDateTime.now().plusDays(2).toString();
+        String bookingBody = String.format("{\"itemId\":1,\"start\":\"%s\",\"end\":\"%s\"}", start, end);
 
         mvc.perform(post("/bookings")
                         .header("X-Sharer-User-Id", "2")
